EXTRA_DIST = \
	libesedb.pmdoc/01bin.xml.in \
	libesedb.pmdoc/01bin-contents.xml \
	libesedb.pmdoc/02include.xml.in \
	libesedb.pmdoc/02include-contents.xml \
	libesedb.pmdoc/03lib.xml.in \
	libesedb.pmdoc/03lib-contents.xml \
	libesedb.pmdoc/04share.xml.in \
	libesedb.pmdoc/04share-contents.xml \
	libesedb.pmdoc/05python.xml.in \
	libesedb.pmdoc/05python-contents.xml \
	libesedb.pmdoc/index.xml \
	libesedb.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libesedb.pmdoc/01bin.xml
	/bin/rm -f libesedb.pmdoc/02include.xml
	/bin/rm -f libesedb.pmdoc/03lib.xml
	/bin/rm -f libesedb.pmdoc/04share.xml
	/bin/rm -f libesedb.pmdoc/05python.xml
	/bin/rm -f libesedb.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

