MSVSCPP_FILES = \
	esedb_test_get_version/esedb_test_get_version.vcproj \
	esedb_test_open_close/esedb_test_open_close.vcproj \
	esedbexport/esedbexport.vcproj \
	esedbinfo/esedbinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libesedb/libesedb.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libmapidb/libmapidb.vcproj \
	libuna/libuna.vcproj \
	pyesedb/pyesedb.vcproj \
	libesedb.sln

SCRIPT_FILES = \
	scripts/vs2008_x64.sh \
	scripts/vs2008_x64_sln.sed \
	scripts/vs2008_x64_vcproj.sed \
	scripts/vs2010_x64.sh \
	scripts/vs2010_x64_sln.sed \
	scripts/vs2010_x64_vcxproj.sed

EXTRA_DIST = \
	$(MSVSCPP_FILES) \
	$(SCRIPT_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

