MSVSCPP_FILES = \
	esedb_test_column/esedb_test_column.vcproj \
	esedb_test_error/esedb_test_error.vcproj \
	esedb_test_file/esedb_test_file.vcproj \
	esedb_test_index/esedb_test_index.vcproj \
	esedb_test_long_value/esedb_test_long_value.vcproj \
	esedb_test_multi_value/esedb_test_multi_value.vcproj \
	esedb_test_notify/esedb_test_notify.vcproj \
	esedb_test_open_close/esedb_test_open_close.vcproj \
	esedb_test_record/esedb_test_record.vcproj \
	esedb_test_support/esedb_test_support.vcproj \
	esedb_test_table/esedb_test_table.vcproj \
	esedbexport/esedbexport.vcproj \
	esedbinfo/esedbinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libesedb/libesedb.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libmapidb/libmapidb.vcproj \
	libuna/libuna.vcproj \
	pyesedb/pyesedb.vcproj \
	libesedb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

