MSVSCPP_FILES = \
	esedb_test_block_descriptor/esedb_test_block_descriptor.vcproj \
	esedb_test_block_tree/esedb_test_block_tree.vcproj \
	esedb_test_block_tree_node/esedb_test_block_tree_node.vcproj \
	esedb_test_catalog/esedb_test_catalog.vcproj \
	esedb_test_catalog_definition/esedb_test_catalog_definition.vcproj \
	esedb_test_checksum/esedb_test_checksum.vcproj \
	esedb_test_column/esedb_test_column.vcproj \
	esedb_test_column_type/esedb_test_column_type.vcproj \
	esedb_test_compression/esedb_test_compression.vcproj \
	esedb_test_data_definition/esedb_test_data_definition.vcproj \
	esedb_test_data_segment/esedb_test_data_segment.vcproj \
	esedb_test_database/esedb_test_database.vcproj \
	esedb_test_error/esedb_test_error.vcproj \
	esedb_test_file/esedb_test_file.vcproj \
	esedb_test_file_header/esedb_test_file_header.vcproj \
	esedb_test_index/esedb_test_index.vcproj \
	esedb_test_io_handle/esedb_test_io_handle.vcproj \
	esedb_test_leaf_page_descriptor/esedb_test_leaf_page_descriptor.vcproj \
	esedb_test_long_value/esedb_test_long_value.vcproj \
	esedb_test_multi_value/esedb_test_multi_value.vcproj \
	esedb_test_notify/esedb_test_notify.vcproj \
	esedb_test_page/esedb_test_page.vcproj \
	esedb_test_page_header/esedb_test_page_header.vcproj \
	esedb_test_page_tree/esedb_test_page_tree.vcproj \
	esedb_test_page_tree_key/esedb_test_page_tree_key.vcproj \
	esedb_test_page_tree_value/esedb_test_page_tree_value.vcproj \
	esedb_test_page_value/esedb_test_page_value.vcproj \
	esedb_test_record/esedb_test_record.vcproj \
	esedb_test_root_page_header/esedb_test_root_page_header.vcproj \
	esedb_test_space_tree/esedb_test_space_tree.vcproj \
	esedb_test_space_tree_value/esedb_test_space_tree_value.vcproj \
	esedb_test_support/esedb_test_support.vcproj \
	esedb_test_table/esedb_test_table.vcproj \
	esedb_test_table_definition/esedb_test_table_definition.vcproj \
	esedb_test_tools_info_handle/esedb_test_tools_info_handle.vcproj \
	esedb_test_tools_output/esedb_test_tools_output.vcproj \
	esedb_test_tools_signal/esedb_test_tools_signal.vcproj \
	esedb_test_tools_windows_search_compression/esedb_test_tools_windows_search_compression.vcproj \
	esedbexport/esedbexport.vcproj \
	esedbinfo/esedbinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libesedb/libesedb.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libmapidb/libmapidb.vcproj \
	libuna/libuna.vcproj \
	pyesedb/pyesedb.vcproj \
	libesedb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

